# chatgpt-rocket-template

./: .env.sample  CONTRIBUTING.md  Cargo.toml  README.md
src/: chatgpt.rs  main.rs
templates/: index.html.hbs
